feat: add remaining operations from splc paper
