# routes/recommender_routes.py
@@ -1,6 +1,6 @@
 import os
 from flask import Blueprint, request, jsonify
-from operations.recommender import check_recommendation_objects, get_recommendations, restrictiveness
+from operations.recommender import check_recommendation_objects, get_recommendations, restrictiveness, accessibility, catalog_coverage, visibility, controversy, global_controversy
 
 recommender_bp = Blueprint('recommender_bp', __name__,
                            url_prefix='/api/v1/recommendations')
@@ -87,7 +87,7 @@ def restrictiveness_route():
     model = request.files['model']
     products = request.files['products']
     features = request.form.getlist('features')
-    
+
     # split by comma
     features = [x.strip() for x in features[0].split(',')]
 
@@ -101,6 +101,156 @@ def restrictiveness_route():
         # Result
         result = restrictiveness(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
             PRODUCT_FOLDER, products.filename), features)
+
+        # Remove files
+        os.remove(os.path.join(MODEL_FOLDER, model.filename))
+        os.remove(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Return result
+        return str(result)
+
+    # If no file is provided
+    else:
+        return 'No file uploaded'
+
+
+@recommender_bp.route('/analysis/accessibility', methods=['POST'])
+def accessibility_route():
+
+    # Get files
+    model = request.files['model']
+    products = request.files['products']
+
+    # Check if files are provided
+    if model.filename != '' and products.filename != '':
+
+        # Save files
+        model.save(os.path.join(MODEL_FOLDER, model.filename))
+        products.save(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Result
+        result = accessibility(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
+            PRODUCT_FOLDER, products.filename))
+
+        # Remove files
+        os.remove(os.path.join(MODEL_FOLDER, model.filename))
+        os.remove(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Return result
+        return str(result)
+
+    # If no file is provided
+    else:
+        return 'No file uploaded'
+
+
+@recommender_bp.route('/analysis/catalog', methods=['POST'])
+def catalog_coverage_route():
+    # Get files
+    model = request.files['model']
+    products = request.files['products']
+
+    # Check if files are provided
+    if model.filename != '' and products.filename != '':
+
+        # Save files
+        model.save(os.path.join(MODEL_FOLDER, model.filename))
+        products.save(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Result
+        result = catalog_coverage(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
+            PRODUCT_FOLDER, products.filename))
+
+        # Remove files
+        os.remove(os.path.join(MODEL_FOLDER, model.filename))
+        os.remove(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Return result
+        return str(result)
+
+    # If no file is provided
+    else:
+        return 'No file uploaded'
+
+
+@recommender_bp.route('/analysis/visibility', methods=['POST'])
+def visibility_route():
+    # Get files
+    model = request.files['model']
+    products = request.files['products']
+    # get string product
+    product = request.form.getlist('product')
+
+    # Check if files are provided
+    if model.filename != '' and products.filename != '':
+
+        # Save files
+        model.save(os.path.join(MODEL_FOLDER, model.filename))
+        products.save(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Result
+        result = visibility(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
+            PRODUCT_FOLDER, products.filename), product[0])
+
+        # Remove files
+        os.remove(os.path.join(MODEL_FOLDER, model.filename))
+        os.remove(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Return result
+        return str(result)
+
+    # If no file is provided
+    else:
+        return 'No file uploaded'
+
+
+@recommender_bp.route('/analysis/controversy', methods=['POST'])
+def controversy_route():
+    # Get files
+    model = request.files['model']
+    products = request.files['products']
+    features = request.form.getlist('features')
+    features = [x.strip() for x in features[0].split(',')]
+
+    # Check if files are provided
+    if model.filename != '' and products.filename != '':
+
+        # Save files
+        model.save(os.path.join(MODEL_FOLDER, model.filename))
+        products.save(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Result
+        result = controversy(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
+            PRODUCT_FOLDER, products.filename), features)
+
+        # Remove files
+        os.remove(os.path.join(MODEL_FOLDER, model.filename))
+        os.remove(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Return result
+        return str(result)
+
+    # If no file is provided
+    else:
+        return 'No file uploaded'
+
+
+@recommender_bp.route('/analysis/global-controversy', methods=['POST'])
+def global_controversy_route():
+    # Get files
+    model = request.files['model']
+    products = request.files['products']
+
+    # Check if files are provided
+    if model.filename != '' and products.filename != '':
+
+        # Save files
+        model.save(os.path.join(MODEL_FOLDER, model.filename))
+        products.save(os.path.join(PRODUCT_FOLDER, products.filename))
+
+        # Result
+        result = global_controversy(os.path.join(MODEL_FOLDER, model.filename), os.path.join(
+            PRODUCT_FOLDER, products.filename))
 
         # Remove files
         os.remove(os.path.join(MODEL_FOLDER, model.filename))
